# kinfu_remake

apps/: CMakeLists.txt  demo.cpp
